--- a/aws-throwaway/Cargo.toml
+++ b/aws-throwaway/Cargo.toml
@@ -9,12 +9,13 @@ description = "An aws-sdk wrapper to spin up temporary resources."
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-use_sdk = ["aws-sdk-ec2", "aws-sdk-iam", "aws-config"]
+use_sdk = ["aws-sdk-ec2", "aws-sdk-iam", "aws-sdk-sts", "aws-config"]
 default = ["use_sdk"]
 
 [dependencies]
 aws-sdk-ec2 = { version = "1.1.0", optional = true }
 aws-sdk-iam = { version = "1.1.0", optional = true }
+aws-sdk-sts = { version = "1.1.0", optional = true }
 aws-config = { version = "1.0.0", optional = true }
 russh = "0.40.0"
 russh-keys = "0.40.0"
